--- a/index.html
+++ b/index.html
@@ -5,88 +5,290 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Hyperspace by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+<head>
+	<title>Hyperspace by HTML5 UP</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
+
+<body class="is-preload">
+
+	<!-- Sidebar -->
+	<section id="sidebar">
+		<div class="inner">
+			<nav>
+				<ul>
+					<li><a href="#intro">Welcome</a></li>
+					<li><a href="#one">Who we are</a></li>
+					<li><a href="#two">What we do</a></li>
+					<li><a href="#three">Get in touch</a></li>
+				</ul>
+			</nav>
+		</div>
+	</section>
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Intro -->
+		<section id="intro" class="wrapper style1 fullscreen fade-up">
+			<div class="inner">
+				<div class="logo">
+					<img src="images/logo.svg" alt="RODIX 로고">
+				</div>
+				<h1>RODIX</h1>
+				<p>(주)로딕스는 인공지능(AI)을 기반으로 로봇과 드론을 통합 관제하는 RLMS(Robot Learning Management System) 및 디지털 트윈 솔루션 전문
+					기업입니다.<br>
+
+					우리는 수많은 로봇과 드론의 두뇌 역할을 하는 AI 통합 관제 시스템(RLMS)과 디지털 트윈 솔루션을 개발하며, 스마트 팩토리, 자율 배송 등 미래 산업 현장에 최적화된 로봇을
+					제안합니다.<br>
+
+					로딕스는 상상 속의 기술을 당신의 비즈니스 현실로 만드는 가장 강력하고 진보적인 파트너입니다.</p>
+				<ul class="actions">
+					<li><a href="#one" class="button scrolly">Learn more</a></li>
+				</ul>
+			</div>
+		</section>
+
+		<!-- One -->
+		<section id="one" class="wrapper style2 spotlights">
+			<section>
+				<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>인공지능(AI) / 최적화 / 관제 소프트웨어</h2>
+						<p>지능형 로봇 시스템의 심장, 'MIR-Core'를 개발합니다. 로딕스의 핵심 기술은 정적인 환경에 최적화된 기존 알고리즘의 한계를 뛰어넘습니다. 예측 불가능한 상황이
+							발생하는 동적 환경에서도 로봇들이 서로 충돌 없이 최적의 경로를 실시간으로 찾아내도록, 우리는 가장 진보된 AI 기술을 연구하고 적용합니다.</p>
+						<p>- MIR-Core (Multi-agent Intelligent Routing Engine)<br>
+
+							실시간 장애물 회피, 다중 로봇 충돌 방지, 동적 경로 재계획 기능을 통해 물류 병목 현상을 해결하고 작업 처리율을 극대화합니다.<br>
+
+							- 주요 기술 및 솔루션<br>
+
+							디지털 트윈 & 시각화 솔루션: PlanViz 오픈소스 시뮬레이터를 기반으로 현장 환경과 로봇 움직임을 가상 공간에 완벽히 구현합니다. 운영자는 직관적인 UI/UX를
+							통해 경로 충돌을 예측하고, 시스템을 손쉽게 디버깅 및 최적화할 수 있습니다.<br>
+
+							이기종/다기종 RLMS: 초기 100대 이상, 최종 1,000대 이상의 다양한 로봇을 하나의 시스템에서 통합 관제하고 운영하는 것을 목표로 합니다.<br>
+
+							MMS (Mobile Mapping System): 이동형 3D 스캐닝 기술로 정밀한 공간 정보를 구축하여 시뮬레이션의 정확도를 높입니다.</p>
+						<ul class="actions">
+							<li><a href="generic.html" class="button">Learn more</a></li>
 						</ul>
-					</nav>
+					</div>
 				</div>
 			</section>
+			<section>
+				<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>로봇 / 드론 융합 솔루션</h2>
+						<p>강력한 소프트웨어가 하드웨어와 만나 현장의 문제를 해결합니다. <br>로딕스는 'MIR-Core' 엔진을 중심으로, 특정 산업 환경의 요구에 정확히 부응하는 맞춤형
+							융합 솔루션을 제공합니다. 단순한 제어를 넘어, 시스템이 스스로 학습하고 환경에 적응하는 차세대 솔루션을 구축합니다.</p>
+						<ul class="actions">
+							<li><a href="generic.html" class="button">Learn more</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>로봇 / 드론 유통</h2>
+						<p>검증된 기술 생태계를 구축하고 안정적으로 공급합니다. <br>로딕스는 단순한 제품 유통을 넘어, 고객의 환경에 가장 적합한 로봇과 당사의 핵심 S/W 솔루션을 결합한
+							'통합 솔루션' 형태로 제공합니다. <br>개방형 표준을 통해 어떤 로봇과도 유연하게 연동되는 강력한 확장성을 자랑합니다.</p>
+						<ul class="actions">
+							<li><a href="generic.html" class="button">Learn more</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>System Integration (SI)</h2>
+						<p>경험과 비전이 만나 최고의 시너지를 창출합니다. <br>로딕스의 가장 큰 자산은 사람과 기술, 그리고 명확한 성장 전략입니다. <br>우리는 각 사업 분야의 역량을
+							유기적으로 통합하여 고객의 요구사항을 완벽하게 충족시키는 '원스톱(One-Stop) 솔루션'을 제공하며, 이를 통해 지속 가능한 성장을 만들어갑니다.</p>
+						<ul class="actions">
+							<li><a href="generic.html" class="button">Learn more</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+		<section id="two" class="wrapper style3 fade-up">
+			<div class="inner">
+				<h2>회사 역량</h2>
+				<p>회사가 걸어온 길을 소개합니다.</p>
 
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<div class="logo">
-								<img src="images/logo.svg" alt="RODIX 로고">
+				<div class="timeline">
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2024.05.~2027.11.</div>
+							<div class="timeline-description">
+								뇌졸중 환자 대상 능동적 지면 보행 훈련을 위한 로보틱 햅틱 케인 플랫폼 개발<br>
 							</div>
-							<h1>RODIX</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
-							</ul>
 						</div>
-					</section>
+					</div>
 
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
-						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2023.11.~2024.10.</div>
+							<div class="timeline-description">
+								48V급 수요연계형 스마트팩토리를 위한 탑승형 공정이동 및 다목적 이모빌리티 공용 플랫폼 사업화
 							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-					</section>
+						</div>
+					</div>
 
-				<!-- Two -->
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2023.06.~2024.04.</div>
+							<div class="timeline-description">
+								48V급 적재중량 30kg이하 바퀴형 공용플랫폼 기반 골프장 자율주행 서비스 로봇 개발
+							</div>
+						</div>
+					</div>
+
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2023.08.~2023.12.</div>
+							<div class="timeline-description">
+								Lidar와 Camera센서융합 CNN기반 맵핑 기술 개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2019.08.~2021.12.</div>
+							<div class="timeline-description">
+								실시간 정밀 위치시스템을 통한 통합관제 기반 공용 플랫폼을 적용한 스마트 캐디봇 디자인 개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2023.03.~2022.12.</div>
+							<div class="timeline-description">
+								UWB센서를 이용한 Follow 기술 산학 R&D
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2023.03.~2022.12.</div>
+							<div class="timeline-description">
+								산불감시용 드론
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2023.06.~2023.11.</div>
+							<div class="timeline-description">
+								딥러닝을 이용한 뇌파인식적용 전동 보장구
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2022.08.~2022.12.</div>
+							<div class="timeline-description">
+								MES연계 자율공정이동용 E-Mobility prototype개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2022.06.~2022.11.</div>
+							<div class="timeline-description">
+								배터리팩(용접)공정데이터의 AI 가공 분석을 통한 품질예측 및 공정최적화
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2021.09.~2022.01.</div>
+							<div class="timeline-description">
+								가상환경의 자율주행 및 운전자보조 시스템
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2019.08.~2021.12.</div>
+							<div class="timeline-description">
+								ICT적용 교통약자를 위한 퍼스널 이모빌리티 디자인 개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2020.04.~2021.12.</div>
+							<div class="timeline-description">
+								스마트폰기반 사물인식 및 Waypoint를 적용한 농축산 E-Mobility 상용화기술 개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2021.04.~2023.12.</div>
+							<div class="timeline-description">
+								탄소중립 대응을 위한 친환경 자동차 개발형 튜닝지원 플랫폼 설계 및 검증 기술 개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2021.</div>
+							<div class="timeline-description">
+								현대자동차 선행개발팀 프로젝트
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2020.05.~2020.12.</div>
+							<div class="timeline-description">
+								교통약자를 위한 이모빌리티 제어시스템 기술 개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2019.01.~2019.12.</div>
+							<div class="timeline-description">
+								교통약자를 위한 퍼스널 이모빌리티 안전기술 개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2018.08.~2019.07.</div>
+							<div class="timeline-description">
+								머신러닝 기반 e-mobility용 BMS 진단 클라우드 플랫폼 개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2015.12.~2017.11.</div>
+							<div class="timeline-description">
+								동작분석 및 가상현실 기반 생산공정 최적화 검증용 Test Bed System 개발
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</section>
+		<!-- Two 
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
@@ -127,86 +329,62 @@
 								<li><a href="generic.html" class="button">Learn more</a></li>
 							</ul>
 						</div>
+					</section>-->
+
+		<!-- Three -->
+		<section id="three" class="wrapper style1 fade-up">
+			<div class="inner">
+				<h2>Contact Us</h2>
+				<div class="split style1">
+					<section>
+						<ul class="contact">
+							<li>
+								<div class="icons">
+									<img src="images/address.png" alt="call">
+								</div>
+								<span>21984 인천광역시 연수구 송도과학로16번길 13-18, 929호
+									송도동, 송도건원테크노큐브<br />
+								</span>
+							</li>
+							<li>
+								<div class="icons">
+									<img src="images/mail.png" alt="call">
+								</div>
+								<a href="#">inquiry@rodix.ai</a>
+							</li>
+							<li>
+								<div class="icons">
+									<img src="images/call.png" alt="call">
+								</div>
+								<span>+82-32-714-3027</span>
+							</li>
+						</ul>
 					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
-						</div>
-					</section>
-
-			</div>
-
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
 				</div>
-			</footer>
+			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</div>
 
-	</body>
+	<!-- Footer -->
+	<footer id="footer" class="wrapper style1-alt">
+		<div class="inner">
+			<ul class="menu">
+				<li>&copy; Untitled. All rights reserved.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
