--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
 <html>
 
 <head>
-	<title>Hyperspace by HTML5 UP</title>
+	<title>Welcome to RODIX (Striving for the Best, Delivering Excellence ~)</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="title" content="로봇 · 드론 · 인공지능 · 디지털 트윈 전문 기업">
+	<meta name="description"
+		content="로봇, 드론, 인공지능(AI), 디지털 트윈, AMR, 스마트 공장, 소프트웨어 개발, 재난/안전 솔루션 및 주문 제작 시스템 전문 기업. 혁신적인 기술과 맞춤형 SI 서비스를 제공합니다.">
+	<meta name="keywords"
+		content="로봇, 로보틱스, 드론, 인공지능, AI, 디지털 트윈, AMR, 스마트 공장, 주문 제작, 소프트웨어 개발, 관제 솔루션, 재난 대응, 안전 시스템, SI, 스마트팩토리, 산업용 로봇, 자율주행, 맞춤형 솔루션, 자동화">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="로봇 · 드론 · 인공지능 · 디지털 트윈 전문 기업">
+	<meta property="og:description"
+		content="로봇, 드론, 인공지능(AI), 디지털 트윈, AMR, 스마트 공장, 소프트웨어 개발, 재난/안전 솔루션 및 주문 제작 시스템 전문 기업.">
+	<meta property="og:url" content="https://www.roidx.ai">
+	<meta property="og:image" content="https://www.rodix.ai/images/logo.png">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="로봇 · 드론 · 인공지능 · 디지털 트윈 전문 기업">
+	<meta name="twitter:description" content="혁신적인 로보틱스, AI, 디지털 트윈, 스마트 공장, 관제 솔루션 전문 기업.">
+	<meta name="twitter:image" content="https://www.rodix.ai/images/logo.png">
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
