4개 사업 파트 gif, 사진 추가 fax 추가

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<!-- One -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+				<a href="#" class="image"><img src="images/fms.gif" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>인공지능(AI) / 최적화 / 관제 소프트웨어</h2>
@@ -98,7 +98,7 @@
 				</div>
 			</section>
 			<section>
-				<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+				<a href="#" class="image"><img src="images/drone.gif" alt="" data-position="top center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>로봇 / 드론 융합 솔루션</h2>
@@ -111,7 +111,7 @@
 				</div>
 			</section>
 			<section>
-				<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+				<a href="#" class="image"><img src="images/drone2.png" alt="" data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>로봇 / 드론 유통</h2>
@@ -124,7 +124,7 @@
 				</div>
 			</section>
 			<section>
-				<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+				<a href="#" class="image"><img src="images/deliveryrobot.png" alt="" data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>System Integration (SI)</h2>
@@ -371,7 +371,13 @@
 								<div class="icons">
 									<img src="images/call.png" alt="call">
 								</div>
-								<span>+82-32-714-3027</span>
+								<span>032-714-3027</span>
+							</li>
+							<li>
+								<div class="icons">
+									<img src="images/fax.png" alt="call">
+								</div>
+								<span>032-714-3027</span>
 							</li>
 						</ul>
 					</section>
