1. learn more 버튼 안보이게 처리 2. 텍스트 bold 처리 3. 폰트 변경: Noto Sans KR 4. 4탭 제외 드래그/우클릭 금지 처리 5.레이아웃 크기 수정 (max-width 등) 6.연혁관련 시작일 기준으로 정렬

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<title>Hyperspace by HTML5 UP</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<!-- Korean-friendly webfont -->
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
@@ -42,14 +44,14 @@
 					<img src="images/logo.svg" alt="RODIX 로고">
 				</div>
 				<h1>RODIX</h1>
-				<p>(주)로딕스는 인공지능(AI)을 기반으로 로봇과 드론을 통합 관제하는 RLMS(Robot Learning Management System) 및 디지털 트윈 솔루션 전문
-					기업입니다.<br>
+				<p><strong>(주)로딕스는 인공지능(AI)을 기반으로 로봇과 드론을 통합 관제하는 RLMS(Robot Learning Management System) 및 디지털 트윈 솔루션 전문
+					기업입니다.</strong><br><br>
 
-					우리는 수많은 로봇과 드론의 두뇌 역할을 하는 AI 통합 관제 시스템(RLMS)과 디지털 트윈 솔루션을 개발하며, 스마트 팩토리, 자율 배송 등 미래 산업 현장에 최적화된 로봇을
+					우리는 수많은 로봇과 드론의 두뇌 역할을 하는 <strong>AI 통합 관제 시스템(RLMS)과 디지털 트윈 솔루션을 개발</strong>하며, 스마트 팩토리, 자율 배송 등 미래 산업 현장에 최적화된 로봇을
 					제안합니다.<br>
 
 					로딕스는 상상 속의 기술을 당신의 비즈니스 현실로 만드는 가장 강력하고 진보적인 파트너입니다.</p>
-				<ul class="actions">
+				<ul class="actions" style="display: none;">
 					<li><a href="#one" class="button scrolly">Learn more</a></li>
 				</ul>
 			</div>
@@ -62,21 +64,21 @@
 				<div class="content">
 					<div class="inner">
 						<h2>인공지능(AI) / 최적화 / 관제 소프트웨어</h2>
-						<p>지능형 로봇 시스템의 심장, 'MIR-Core'를 개발합니다. 로딕스의 핵심 기술은 정적인 환경에 최적화된 기존 알고리즘의 한계를 뛰어넘습니다. 예측 불가능한 상황이
+						<p>	지능형 로봇 시스템의 심장, <strong>'MIR-Core'</strong>를 개발합니다. 로딕스의 핵심 기술은 정적인 환경에 최적화된 기존 알고리즘의 한계를 뛰어넘습니다. 예측 불가능한 상황이
 							발생하는 동적 환경에서도 로봇들이 서로 충돌 없이 최적의 경로를 실시간으로 찾아내도록, 우리는 가장 진보된 AI 기술을 연구하고 적용합니다.</p>
-						<p>- MIR-Core (Multi-agent Intelligent Routing Engine)<br>
+						<p style="font-size: 16pt; font-weight: bold; margin: 0.1em;">	- MIR-Core (Multi-agent Intelligent Routing Engine)</p>
 
-							실시간 장애물 회피, 다중 로봇 충돌 방지, 동적 경로 재계획 기능을 통해 물류 병목 현상을 해결하고 작업 처리율을 극대화합니다.<br>
+						<p>	실시간 장애물 회피, 다중 로봇 충돌 방지, 동적 경로 재계획 기능을 통해 물류 병목 현상을 해결하고 작업 처리율을 극대화합니다.<br>
 
-							- 주요 기술 및 솔루션<br>
+						<p style="font-size: 16pt; font-weight: bold; margin: 0.1em;">	- 주요 기술 및 솔루션</p>
 
-							디지털 트윈 & 시각화 솔루션: PlanViz 오픈소스 시뮬레이터를 기반으로 현장 환경과 로봇 움직임을 가상 공간에 완벽히 구현합니다. 운영자는 직관적인 UI/UX를
-							통해 경로 충돌을 예측하고, 시스템을 손쉽게 디버깅 및 최적화할 수 있습니다.<br>
+						<p>	<strong>디지털 트윈 & 시각화 솔루션:</strong> PlanViz 오픈소스 시뮬레이터를 기반으로 현장 환경과 로봇 움직임을 가상 공간에 완벽히 구현합니다. 운영자는 직관적인 UI/UX를
+							통해 경로 충돌을 예측하고, 시스템을 손쉽게 디버깅 및 최적화할 수 있습니다.<br><br>
 
-							이기종/다기종 RLMS: 초기 100대 이상, 최종 1,000대 이상의 다양한 로봇을 하나의 시스템에서 통합 관제하고 운영하는 것을 목표로 합니다.<br>
+							<strong>이기종/다기종 RLMS:</strong> 초기 100대 이상, 최종 1,000대 이상의 다양한 로봇을 하나의 시스템에서 통합 관제하고 운영하는 것을 목표로 합니다.<br><br>
 
-							MMS (Mobile Mapping System): 이동형 3D 스캐닝 기술로 정밀한 공간 정보를 구축하여 시뮬레이션의 정확도를 높입니다.</p>
-						<ul class="actions">
+							<strong>MMS (Mobile Mapping System):</strong> 이동형 3D 스캐닝 기술로 정밀한 공간 정보를 구축하여 시뮬레이션의 정확도를 높입니다.</p>
+						<ul class="actions" style="display: none;">
 							<li><a href="generic.html" class="button">Learn more</a></li>
 						</ul>
 					</div>
@@ -87,9 +89,9 @@
 				<div class="content">
 					<div class="inner">
 						<h2>로봇 / 드론 융합 솔루션</h2>
-						<p>강력한 소프트웨어가 하드웨어와 만나 현장의 문제를 해결합니다. <br>로딕스는 'MIR-Core' 엔진을 중심으로, 특정 산업 환경의 요구에 정확히 부응하는 맞춤형
+						<p>강력한 소프트웨어가 하드웨어와 만나 현장의 문제를 해결합니다. <br>로딕스는 <strong>'MIR-Core'</strong> 엔진을 중심으로, 특정 산업 환경의 요구에 정확히 부응하는 맞춤형
 							융합 솔루션을 제공합니다. 단순한 제어를 넘어, 시스템이 스스로 학습하고 환경에 적응하는 차세대 솔루션을 구축합니다.</p>
-						<ul class="actions">
+						<ul class="actions" style="display: none;">
 							<li><a href="generic.html" class="button">Learn more</a></li>
 						</ul>
 					</div>
@@ -101,8 +103,8 @@
 					<div class="inner">
 						<h2>로봇 / 드론 유통</h2>
 						<p>검증된 기술 생태계를 구축하고 안정적으로 공급합니다. <br>로딕스는 단순한 제품 유통을 넘어, 고객의 환경에 가장 적합한 로봇과 당사의 핵심 S/W 솔루션을 결합한
-							'통합 솔루션' 형태로 제공합니다. <br>개방형 표준을 통해 어떤 로봇과도 유연하게 연동되는 강력한 확장성을 자랑합니다.</p>
-						<ul class="actions">
+							<strong>'통합 솔루션'</strong> 형태로 제공합니다. <br>개방형 표준을 통해 어떤 로봇과도 유연하게 연동되는 강력한 확장성을 자랑합니다.</p>
+						<ul class="actions" style="display: none;">
 							<li><a href="generic.html" class="button">Learn more</a></li>
 						</ul>
 					</div>
@@ -114,8 +116,8 @@
 					<div class="inner">
 						<h2>System Integration (SI)</h2>
 						<p>경험과 비전이 만나 최고의 시너지를 창출합니다. <br>로딕스의 가장 큰 자산은 사람과 기술, 그리고 명확한 성장 전략입니다. <br>우리는 각 사업 분야의 역량을
-							유기적으로 통합하여 고객의 요구사항을 완벽하게 충족시키는 '원스톱(One-Stop) 솔루션'을 제공하며, 이를 통해 지속 가능한 성장을 만들어갑니다.</p>
-						<ul class="actions">
+							유기적으로 통합하여 고객의 요구사항을 완벽하게 충족시키는 <strong>'원스톱(One-Stop) 솔루션'</strong>을 제공하며, 이를 통해 지속 가능한 성장을 만들어갑니다.</p>
+						<ul class="actions" style="display: none;">
 							<li><a href="generic.html" class="button">Learn more</a></li>
 						</ul>
 					</div>
@@ -125,40 +127,28 @@
 
 		<section id="two" class="wrapper style3 fade-up">
 			<div class="inner">
-				<h2>회사 역량</h2>
-				<p>회사가 걸어온 길을 소개합니다.</p>
-
+				<h2>역량</h2>
+			
 				<div class="timeline">
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2024.05.~2027.11.</div>
+							<div class="timeline-date">2024.05 ~ 2027.11</div>
 							<div class="timeline-description">
 								뇌졸중 환자 대상 능동적 지면 보행 훈련을 위한 로보틱 햅틱 케인 플랫폼 개발<br>
 							</div>
 						</div>
 					</div>
-
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2023.11.~2024.10.</div>
+							<div class="timeline-date">2023.11 ~ 2024.10</div>
 							<div class="timeline-description">
 								48V급 수요연계형 스마트팩토리를 위한 탑승형 공정이동 및 다목적 이모빌리티 공용 플랫폼 사업화
 							</div>
 						</div>
 					</div>
-
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2023.06.~2024.04.</div>
-							<div class="timeline-description">
-								48V급 적재중량 30kg이하 바퀴형 공용플랫폼 기반 골프장 자율주행 서비스 로봇 개발
-							</div>
-						</div>
-					</div>
-
-					<div class="timeline-item">
-						<div class="timeline-content">
-							<div class="timeline-date">2023.08.~2023.12.</div>
+							<div class="timeline-date">2023.08 ~ 2023.12</div>
 							<div class="timeline-description">
 								Lidar와 Camera센서융합 CNN기반 맵핑 기술 개발
 							</div>
@@ -166,15 +156,7 @@
 					</div>
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2019.08.~2021.12.</div>
-							<div class="timeline-description">
-								실시간 정밀 위치시스템을 통한 통합관제 기반 공용 플랫폼을 적용한 스마트 캐디봇 디자인 개발
-							</div>
-						</div>
-					</div>
-					<div class="timeline-item">
-						<div class="timeline-content">
-							<div class="timeline-date">2023.03.~2022.12.</div>
+							<div class="timeline-date">2023.07 ~ 2024.02</div>
 							<div class="timeline-description">
 								UWB센서를 이용한 Follow 기술 산학 R&D
 							</div>
@@ -182,7 +164,7 @@
 					</div>
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2023.03.~2022.12.</div>
+							<div class="timeline-date">2023.07 ~ 2024.02</div>
 							<div class="timeline-description">
 								산불감시용 드론
 							</div>
@@ -190,7 +172,15 @@
 					</div>
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2023.06.~2023.11.</div>
+							<div class="timeline-date">2023.06 ~ 2024.04</div>
+							<div class="timeline-description">
+								48V급 적재중량 30kg이하 바퀴형 공용플랫폼 기반 골프장 자율주행 서비스 로봇 개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2023.06 ~ 2023.11</div>
 							<div class="timeline-description">
 								딥러닝을 이용한 뇌파인식적용 전동 보장구
 							</div>
@@ -198,7 +188,7 @@
 					</div>
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2022.08.~2022.12.</div>
+							<div class="timeline-date">2022.08 ~ 2022.12</div>
 							<div class="timeline-description">
 								MES연계 자율공정이동용 E-Mobility prototype개발
 							</div>
@@ -206,7 +196,7 @@
 					</div>
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2022.06.~2022.11.</div>
+							<div class="timeline-date">2022.06 ~ 2022.11</div>
 							<div class="timeline-description">
 								배터리팩(용접)공정데이터의 AI 가공 분석을 통한 품질예측 및 공정최적화
 							</div>
@@ -214,7 +204,7 @@
 					</div>
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2021.09.~2022.01.</div>
+							<div class="timeline-date">2021.09 ~ 2022.01</div>
 							<div class="timeline-description">
 								가상환경의 자율주행 및 운전자보조 시스템
 							</div>
@@ -222,23 +212,7 @@
 					</div>
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2019.08.~2021.12.</div>
-							<div class="timeline-description">
-								ICT적용 교통약자를 위한 퍼스널 이모빌리티 디자인 개발
-							</div>
-						</div>
-					</div>
-					<div class="timeline-item">
-						<div class="timeline-content">
-							<div class="timeline-date">2020.04.~2021.12.</div>
-							<div class="timeline-description">
-								스마트폰기반 사물인식 및 Waypoint를 적용한 농축산 E-Mobility 상용화기술 개발
-							</div>
-						</div>
-					</div>
-					<div class="timeline-item">
-						<div class="timeline-content">
-							<div class="timeline-date">2021.04.~2023.12.</div>
+							<div class="timeline-date">2021.04 ~ 2023.12</div>
 							<div class="timeline-description">
 								탄소중립 대응을 위한 친환경 자동차 개발형 튜닝지원 플랫폼 설계 및 검증 기술 개발
 							</div>
@@ -246,7 +220,7 @@
 					</div>
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2021.</div>
+							<div class="timeline-date">2021</div>
 							<div class="timeline-description">
 								현대자동차 선행개발팀 프로젝트
 							</div>
@@ -254,7 +228,7 @@
 					</div>
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2020.05.~2020.12.</div>
+							<div class="timeline-date">2020.05 ~ 2020.12</div>
 							<div class="timeline-description">
 								교통약자를 위한 이모빌리티 제어시스템 기술 개발
 							</div>
@@ -262,7 +236,31 @@
 					</div>
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2019.01.~2019.12.</div>
+							<div class="timeline-date">2020.04 ~ 2021.12</div>
+							<div class="timeline-description">
+								스마트폰기반 사물인식 및 Waypoint를 적용한 농축산 E-Mobility 상용화기술 개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2019.08 ~ 2021.12</div>
+							<div class="timeline-description">
+								실시간 정밀 위치시스템을 통한 통합관제 기반 공용 플랫폼을 적용한 스마트 캐디봇 디자인 개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2019.08 ~ 2021.12</div>
+							<div class="timeline-description">
+								ICT적용 교통약자를 위한 퍼스널 이모빌리티 디자인 개발
+							</div>
+						</div>
+					</div>
+					<div class="timeline-item">
+						<div class="timeline-content">
+							<div class="timeline-date">2019.01 ~ 2019.12</div>
 							<div class="timeline-description">
 								교통약자를 위한 퍼스널 이모빌리티 안전기술 개발
 							</div>
@@ -270,7 +268,7 @@
 					</div>
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2018.08.~2019.07.</div>
+							<div class="timeline-date">2018.08 ~ 2019.07</div>
 							<div class="timeline-description">
 								머신러닝 기반 e-mobility용 BMS 진단 클라우드 플랫폼 개발
 							</div>
@@ -278,7 +276,7 @@
 					</div>
 					<div class="timeline-item">
 						<div class="timeline-content">
-							<div class="timeline-date">2015.12.~2017.11.</div>
+							<div class="timeline-date">2015.12 ~ 2017.11</div>
 							<div class="timeline-description">
 								동작분석 및 가상현실 기반 생산공정 최적화 검증용 Test Bed System 개발
 							</div>
@@ -342,8 +340,8 @@
 								<div class="icons">
 									<img src="images/address.png" alt="call">
 								</div>
-								<span>21984 인천광역시 연수구 송도과학로16번길 13-18, 929호
-									송도동, 송도건원테크노큐브<br />
+								<span class="selectable">(21984) 인천광역시 연수구 송도과학로16번길 13-18, 929호
+									<br>(송도동, 송도건원테크노큐브)
 								</span>
 							</li>
 							<li>
@@ -356,7 +354,7 @@
 								<div class="icons">
 									<img src="images/call.png" alt="call">
 								</div>
-								<span>+82-32-714-3027</span>
+								<span class="selectable">+82-32-714-3027</span>
 							</li>
 						</ul>
 					</section>
