좌측 메뉴 이름 변경

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 			<nav>
 				<ul>
 					<li><a href="#intro">Welcome</a></li>
-					<li><a href="#one">Who we are</a></li>
-					<li><a href="#two">What we do</a></li>
-					<li><a href="#three">Get in touch</a></li>
+					<li><a href="#one">사업 분야</a></li>
+					<li><a href="#two">회사 역량</a></li>
+					<li><a href="#three">Contact Us</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -142,7 +142,7 @@
 
 		<section id="two" class="wrapper style3 fade-up">
 			<div class="inner">
-				<h2>역량</h2>
+				<h2>회사 역량</h2>
 			
 				<div class="timeline">
 					<div class="timeline-item">
