--- a/index.html
+++ b/index.html
@@ -60,12 +60,17 @@
 				</div>
 				<h1>RODIX</h1>
 				<p><strong>(주)로딕스는 인공지능(AI)을 기반으로 로봇과 드론을 통합 관제하는 RLMS(Robot Learning Management System) 및 디지털 트윈 솔루션 전문
-					기업입니다.</strong><br><br>
+						기업입니다.</strong><br><br>
 
-					우리는 수많은 로봇과 드론의 두뇌 역할을 하는 <strong>AI 통합 관제 시스템(RLMS)과 디지털 트윈 솔루션을 개발</strong>하며, 스마트 팩토리, 자율 배송 등 미래 산업 현장에 최적화된 로봇을
-					제안합니다.<br>
+					우리는 수많은 로봇과 드론의 두뇌 역할을 하는 <strong>AI 통합 관제 시스템(RLMS)과 디지털 트윈 솔루션을 개발</strong>하며, 스마트 팩토리, 자율 배송 등 미래
+					산업 현장에 최적화된 로봇을
+					제안합니다.<br><br>
 
-					로딕스는 상상 속의 기술을 당신의 비즈니스 현실로 만드는 가장 강력하고 진보적인 파트너입니다.</p>
+					또한 고객이 고민하는 모든 종류의 디지털 전환(DX)을 돕고 있습니다. 복잡한 데이터 문제나 오래된 업무 방식의 개선이 필요하다면, 로딕스가 가장 효율적인 IT 시스템으로 함께
+					고민하고 해결해 나가겠습니다.<br><br>
+
+					<strong>기술을 넘어, 당신의 비즈니스가 나아갈 방향을 제시하는 든든한 파트너가 되겠습니다.</strong>
+				</p>
 				<ul class="actions" style="display: none;">
 					<li><a href="#one" class="button scrolly">Learn more</a></li>
 				</ul>
@@ -143,7 +148,7 @@
 		<section id="two" class="wrapper style3 fade-up">
 			<div class="inner">
 				<h2>회사 역량</h2>
-			
+
 				<div class="timeline">
 					<div class="timeline-item">
 						<div class="timeline-content">
@@ -369,7 +374,7 @@
 								<div class="icons">
 									<img src="images/call.png" alt="call">
 								</div>
-								<span class="selectable">032-714-3027</span>
+								<span class="selectable">070-4895-2890~1</span>
 							</li>
 							<li>
 								<div class="icons">
