--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
 					<img src="images/logo.svg" alt="RODIX 로고">
 				</div>
 				<h1>RODIX</h1>
-				<p><strong>(주)로딕스는 인공지능(AI)을 기반으로 로봇과 드론을 통합 관제하는 RLMS(Robot Learning Management System) 및 디지털 트윈 솔루션 전문
+				<p><strong>(주)로딕스는 인공지능(AI)을 기반으로 로봇과 드론을 통합 관제하는<br>
+					RLMS(Robot Learning Management System) 및 디지털 트윈 솔루션 전문
 					기업입니다.</strong><br><br>
 
-					우리는 수많은 로봇과 드론의 두뇌 역할을 하는 <strong>AI 통합 관제 시스템(RLMS)과 디지털 트윈 솔루션을 개발</strong>하며, 스마트 팩토리, 자율 배송 등 미래 산업 현장에 최적화된 로봇을
+					우리는 수많은 로봇과 드론의 두뇌 역할을 하는 <strong>AI 통합 관제 시스템(RLMS)과 디지털 트윈 솔루션을 개발</strong>하며,<br>
+					스마트 팩토리, 자율 배송 등 미래 산업 현장에 최적화된 로봇을
 					제안합니다.<br>
 
 					로딕스는 상상 속의 기술을 당신의 비즈니스 현실로 만드는 가장 강력하고 진보적인 파트너입니다.</p>
@@ -79,7 +81,8 @@
 				<div class="content">
 					<div class="inner">
 						<h2>인공지능(AI) / 최적화 / 관제 소프트웨어</h2>
-						<p>	지능형 로봇 시스템의 심장, <strong>'MIR-Core'</strong>를 개발합니다. 로딕스의 핵심 기술은 정적인 환경에 최적화된 기존 알고리즘의 한계를 뛰어넘습니다. 예측 불가능한 상황이
+						<p>	지능형 로봇 시스템의 심장, <strong>'MIR-Core'</strong>를 개발합니다.<br>
+							로딕스의 핵심 기술은 정적인 환경에 최적화된 기존 알고리즘의 한계를 뛰어넘습니다. 예측 불가능한 상황이
 							발생하는 동적 환경에서도 로봇들이 서로 충돌 없이 최적의 경로를 실시간으로 찾아내도록, 우리는 가장 진보된 AI 기술을 연구하고 적용합니다.</p>
 						<p style="font-size: 16pt; font-weight: bold; margin: 0.1em;">	- MIR-Core (Multi-agent Intelligent Routing Engine)</p>
 
@@ -105,7 +108,8 @@
 					<div class="inner">
 						<h2>로봇 / 드론 융합 솔루션</h2>
 						<p>강력한 소프트웨어가 하드웨어와 만나 현장의 문제를 해결합니다. <br>로딕스는 <strong>'MIR-Core'</strong> 엔진을 중심으로, 특정 산업 환경의 요구에 정확히 부응하는 맞춤형
-							융합 솔루션을 제공합니다. 단순한 제어를 넘어, 시스템이 스스로 학습하고 환경에 적응하는 차세대 솔루션을 구축합니다.</p>
+							융합 솔루션을 제공합니다.<br>
+							단순한 제어를 넘어, 시스템이 스스로 학습하고 환경에 적응하는 차세대 솔루션을 구축합니다.</p>
 						<ul class="actions" style="display: none;">
 							<li><a href="generic.html" class="button">Learn more</a></li>
 						</ul>
@@ -376,6 +380,18 @@
 									<img src="images/fax.png" alt="call">
 								</div>
 								<span class="selectable">032-714-3027</span>
+							</li>
+						</ul>
+					</section>
+				</div>
+				<h3 style="margin-bottom: 16px; font-size: 24px;">Social</h3>
+				<div class="split style1">
+					<section>
+						<ul class="contact">
+							<li>
+								<a class="icons" href="https://www.youtube.com/@RODIX-AI" style="width: 48px;">
+									<img src="images/youtube_red.png"  style="width: 100%;"></a>
+								</a>
 							</li>
 						</ul>
 					</section>
