텍스트 서식 수정 a태그 클릭 방지 유튜브 링크 연동/아이콘 추가 - images/youtube_red , youtube_black

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 					기업입니다.</strong><br><br>
 
 					우리는 수많은 로봇과 드론의 두뇌 역할을 하는 <strong>AI 통합 관제 시스템(RLMS)과 디지털 트윈 솔루션을 개발</strong>하며,<br>
-					스마트 팩토리, 자율 배송 등 미래 산업 현장에 최적화된 로봇을
-					제안합니다.<br>
+					스마트 팩토리, 자율 배송 등 미래 산업 현장에 최적화된 로봇을 제안합니다.<br><br>
 
 					또한 고객이 고민하는 모든 종류의 디지털 전환(DX)을 돕고 있습니다. 복잡한 데이터 문제나 오래된 업무 방식의 개선이 필요하다면, 로딕스가 가장 효율적인 IT 시스템으로 함께
 					고민하고 해결해 나가겠습니다.<br><br>
@@ -394,7 +393,7 @@
 						<ul class="contact">
 							<li>
 								<a class="icons" href="https://www.youtube.com/@RODIX-AI" style="width: 48px;">
-									<img src="images/youtube_red.png"  style="width: 100%;"></a>
+									<img src="images/youtube_black.png"  style="width: 100%;"></a>
 								</a>
 							</li>
 						</ul>
