특허증 추가

--- a/index.html
+++ b/index.html
@@ -306,6 +306,19 @@
 					</div>
 
 				</div>
+				<hr class="major">
+				<h3>주요 특허</h3>
+				<div class="patent-gallery">
+					<div class="patent-item">
+						<img src="images/patent_placeholder_1.jpg" alt="특허증 1">
+					</div>
+					<div class="patent-item">
+						<img src="images/patent_placeholder_2.jpg" alt="특허증 2">
+					</div>
+					<div class="patent-item">
+						<img src="images/patent_placeholder_3.jpg" alt="특허증 3">
+					</div>
+				</div>
 			</div>
 		</section>
 		<!-- Two 
