gif->영상으로 변경

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<meta name="twitter:description" content="혁신적인 로보틱스, AI, 디지털 트윈, 스마트 공장, 관제 솔루션 전문 기업.">
 	<meta name="twitter:image" content="https://www.rodix.ai/images/logo.png">
 	<!-- Korean-friendly webfont -->
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700;900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700;900&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
@@ -60,8 +61,8 @@
 				</div>
 				<h1>RODIX</h1>
 				<p><strong>(주)로딕스는 인공지능(AI)을 기반으로 로봇과 드론을 통합 관제하는<br>
-					RLMS(Robot Learning Management System) 및 디지털 트윈 솔루션 전문
-					기업입니다.</strong><br><br>
+						RLMS(Robot Learning Management System) 및 디지털 트윈 솔루션 전문
+						기업입니다.</strong><br><br>
 
 					우리는 수많은 로봇과 드론의 두뇌 역할을 하는 <strong>AI 통합 관제 시스템(RLMS)과 디지털 트윈 솔루션을 개발</strong>하며,<br>
 					스마트 팩토리, 자율 배송 등 미래 산업 현장에 최적화된 로봇을 제안합니다.<br><br>
@@ -80,25 +81,35 @@
 		<!-- One -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="#" class="image"><img src="images/fms.gif" alt="" data-position="center center" /></a>
+				<a href="#" class="image">
+					<video autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover;">
+						<source src="images/fms.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
+				</a>
 				<div class="content">
 					<div class="inner">
 						<h2>인공지능(AI) / 최적화 / 관제 소프트웨어</h2>
-						<p>	지능형 로봇 시스템의 심장, <strong>'MIR-Core'</strong>를 개발합니다.<br>
+						<p> 지능형 로봇 시스템의 심장, <strong>'MIR-Core'</strong>를 개발합니다.<br>
 							로딕스의 핵심 기술은 정적인 환경에 최적화된 기존 알고리즘의 한계를 뛰어넘습니다. 예측 불가능한 상황이
 							발생하는 동적 환경에서도 로봇들이 서로 충돌 없이 최적의 경로를 실시간으로 찾아내도록, 우리는 가장 진보된 AI 기술을 연구하고 적용합니다.</p>
-						<p style="font-size: 16pt; font-weight: bold; margin: 0.1em;">	- MIR-Core (Multi-agent Intelligent Routing Engine)</p>
+						<p style="font-size: 16pt; font-weight: bold; margin: 0.1em;"> - MIR-Core (Multi-agent
+							Intelligent Routing Engine)</p>
 
-						<p>	실시간 장애물 회피, 다중 로봇 충돌 방지, 동적 경로 재계획 기능을 통해 물류 병목 현상을 해결하고 작업 처리율을 극대화합니다.<br>
+						<p> 실시간 장애물 회피, 다중 로봇 충돌 방지, 동적 경로 재계획 기능을 통해 물류 병목 현상을 해결하고 작업 처리율을 극대화합니다.<br>
 
-						<p style="font-size: 16pt; font-weight: bold; margin: 0.1em;">	- 주요 기술 및 솔루션</p>
+						<p style="font-size: 16pt; font-weight: bold; margin: 0.1em;"> - 주요 기술 및 솔루션</p>
 
-						<p>	<strong>디지털 트윈 & 시각화 솔루션:</strong> PlanViz 오픈소스 시뮬레이터를 기반으로 현장 환경과 로봇 움직임을 가상 공간에 완벽히 구현합니다. 운영자는 직관적인 UI/UX를
+						<p> <strong>디지털 트윈 & 시각화 솔루션:</strong> PlanViz 오픈소스 시뮬레이터를 기반으로 현장 환경과 로봇 움직임을 가상 공간에 완벽히 구현합니다.
+							운영자는 직관적인 UI/UX를
 							통해 경로 충돌을 예측하고, 시스템을 손쉽게 디버깅 및 최적화할 수 있습니다.<br><br>
 
-							<strong>이기종/다기종 RLMS:</strong> 초기 100대 이상, 최종 1,000대 이상의 다양한 로봇을 하나의 시스템에서 통합 관제하고 운영하는 것을 목표로 합니다.<br><br>
+							<strong>이기종/다기종 RLMS:</strong> 초기 100대 이상, 최종 1,000대 이상의 다양한 로봇을 하나의 시스템에서 통합 관제하고 운영하는 것을
+							목표로 합니다.<br><br>
 
-							<strong>MMS (Mobile Mapping System):</strong> 이동형 3D 스캐닝 기술로 정밀한 공간 정보를 구축하여 시뮬레이션의 정확도를 높입니다.</p>
+							<strong>MMS (Mobile Mapping System):</strong> 이동형 3D 스캐닝 기술로 정밀한 공간 정보를 구축하여 시뮬레이션의 정확도를
+							높입니다.
+						</p>
 						<ul class="actions" style="display: none;">
 							<li><a href="generic.html" class="button">Learn more</a></li>
 						</ul>
@@ -106,11 +117,18 @@
 				</div>
 			</section>
 			<section>
-				<a href="#" class="image"><img src="images/drone.gif" alt="" data-position="top center" /></a>
+				<a href="#" class="image">
+					<video autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover;">
+						<source src="images/drone.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
+				</a>
 				<div class="content">
 					<div class="inner">
+
 						<h2>로봇 / 드론 융합 솔루션</h2>
-						<p>강력한 소프트웨어가 하드웨어와 만나 현장의 문제를 해결합니다. <br>로딕스는 <strong>'MIR-Core'</strong> 엔진을 중심으로, 특정 산업 환경의 요구에 정확히 부응하는 맞춤형
+						<p>강력한 소프트웨어가 하드웨어와 만나 현장의 문제를 해결합니다. <br>로딕스는 <strong>'MIR-Core'</strong> 엔진을 중심으로, 특정 산업 환경의
+							요구에 정확히 부응하는 맞춤형
 							융합 솔루션을 제공합니다.<br>
 							단순한 제어를 넘어, 시스템이 스스로 학습하고 환경에 적응하는 차세대 솔루션을 구축합니다.</p>
 						<ul class="actions" style="display: none;">
@@ -125,7 +143,8 @@
 					<div class="inner">
 						<h2>로봇 / 드론 유통</h2>
 						<p>검증된 기술 생태계를 구축하고 안정적으로 공급합니다. <br>로딕스는 단순한 제품 유통을 넘어, 고객의 환경에 가장 적합한 로봇과 당사의 핵심 S/W 솔루션을 결합한
-							<strong>'통합 솔루션'</strong> 형태로 제공합니다. <br>개방형 표준을 통해 어떤 로봇과도 유연하게 연동되는 강력한 확장성을 자랑합니다.</p>
+							<strong>'통합 솔루션'</strong> 형태로 제공합니다. <br>개방형 표준을 통해 어떤 로봇과도 유연하게 연동되는 강력한 확장성을 자랑합니다.
+						</p>
 						<ul class="actions" style="display: none;">
 							<li><a href="generic.html" class="button">Learn more</a></li>
 						</ul>
@@ -138,7 +157,8 @@
 					<div class="inner">
 						<h2>System Integration (SI)</h2>
 						<p>경험과 비전이 만나 최고의 시너지를 창출합니다. <br>로딕스의 가장 큰 자산은 사람과 기술, 그리고 명확한 성장 전략입니다. <br>우리는 각 사업 분야의 역량을
-							유기적으로 통합하여 고객의 요구사항을 완벽하게 충족시키는 <strong>'원스톱(One-Stop) 솔루션'</strong>을 제공하며, 이를 통해 지속 가능한 성장을 만들어갑니다.</p>
+							유기적으로 통합하여 고객의 요구사항을 완벽하게 충족시키는 <strong>'원스톱(One-Stop) 솔루션'</strong>을 제공하며, 이를 통해 지속 가능한 성장을
+							만들어갑니다.</p>
 						<ul class="actions" style="display: none;">
 							<li><a href="generic.html" class="button">Learn more</a></li>
 						</ul>
@@ -406,7 +426,7 @@
 						<ul class="contact">
 							<li>
 								<a class="icons" href="https://www.youtube.com/@RODIX-AI" style="width: 48px;">
-									<img src="images/youtube_black.png"  style="width: 100%;"></a>
+									<img src="images/youtube_black.png" style="width: 100%;"></a>
 								</a>
 							</li>
 						</ul>
