--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 								<div class="icons">
 									<img src="images/mail.png" alt="call">
 								</div>
-								<a href="#">inquiry@rodix.ai</a>
+								<span class="selectable">inquiry@rodix.ai</span>
 							</li>
 							<li>
 								<div class="icons">
